fix: actualizar login a formato JSON y soporte de cookies. Cambia el formato de envío de credenciales de 'x-www-form-urlencoded' a 'application/json'.Sincroniza la clave de firma JWT con la configuración del backend para evitar errores de validación.Asegura que el token se almacene correctamente en cookies para permitir la navegación entre puertos sin redirecciones 302.- Resuelve el error 415 (Unsupported Media Type) en el endpoint /login.